# High-Performance-and-Distributed-Computing-Systems-tasks

./: .gitignore  meson.build  task1.cc  task2_1.cc  task2_2.cc  task2_3.cc
scripts/: 2_1_1.gnuplot  2_1_2.gnuplot  2_2.gnuplot  2_3.gnuplot  plot.py  plot_multiple.py
